--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bcryptjs": "^3.0.2",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
     "react-icons": "^5.5.0",
