--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
