--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
